@@ -14,6 +14,9 @@ GNU/Linux:
     Added abovementioned functions as socket methods
     Added BT_SECURITY_*, L2CAP_MODE_* constants
 
+windows:
+    Allow threads during the initialization of the inquiry in widcomm
+
 changes from 0.17 to 0.18 (Nov 25, 2009)
 ----------------------------------------
 
